--- a/004-Functions-And-More/Functions And More - Chap 01 - Exercises.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 01 - Exercises.ipynb
@@ -30,375 +30,58 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aSdEiF-qktuN",
+        "id": "zDZdtpoR6-82",
         "colab_type": "text"
       },
       "source": [
-        "## `reversed` and `sorted`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sq5UiI29gtU1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from random import shuffle"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yoUxpCKgg8Wc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "l = [*range(10)]\n",
-        "print(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Z9vy3xS6h89r",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for i in reversed(l):\n",
-        "  print(i)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bkoCFHq_iY03",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "shuffle(l)\n",
-        "print(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UskZ_D30icJe",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "sorted(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v0OWP5LpifUT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MbHVVvqBiglk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "l.sort()\n",
-        "print(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YrKigTcLixRo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "sorted(l, reverse=True)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XmTNcE1RP9bX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "presidents = [{'firstname': 'George H. W.', 'lastname': 'Bush'},\n",
-        "              {'firstname': 'Thomas', 'lastname': 'Jefferson'},\n",
-        "              {'firstname': 'George W.', 'lastname': 'Bush'},\n",
-        "              {'firstname': 'George', 'lastname': 'Washington'},\n",
-        "              {'firstname': 'Theodore', 'lastname': 'Roosevelt'},\n",
-        "              {'firstname': 'Barack', 'lastname': 'Obama'},\n",
-        "              {'firstname': 'Abraham', 'lastname': 'Lincoln'},\n",
-        "              {'firstname': 'John', 'lastname': 'Kennedy'},\n",
-        "              {'firstname': 'Franklin', 'lastname': 'Roosevelt'}]\n",
+        "## 1.\n",
         "\n",
-        "presidents_2 = sorted(presidents, key=lambda p: p['lastname'])\n",
-        "print(presidents_2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UlnbEJUhZJ_t",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "presidents_2 = sorted(presidents, key=lambda p: p['firstname'])\n",
-        "print(presidents_2)\n",
+        "Recall the Fibonacci sequence from [this workshop](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/002-Control-Flow/Control%20Flow%20-%20Workshop.ipynb#scrollTo=gSLJQBHULPUj)\n",
         "\n",
-        "presidents_3 = sorted(presidents_2, key=lambda p: p['lastname'])\n",
-        "print(presidents_3)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nyxIlX8JlEFH",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Defining a function"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fT3i8RjpfJH5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def say_hello():\n",
-        "  print('I say: Hello')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "psI1Y5QihgTW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "say_hello()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Foyu5T3JhjFZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def say(text):\n",
-        "  print('I say:', text)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LfwemzY9hozD",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "say('Hello')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4-ID1ZaPhquZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def pretty_print(text, delimiters):\n",
-        "  print(delimiters[0] + text + delimiters[1])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2rcdYr5TqQvx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pretty_print('Hello World', '{}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gz9Zx7zcqXyU",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "pretty_print('Hello World', ['{ ', ' }'])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hpxYsKD49iyZ",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Returning a value"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YSmu3N2P9luc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def pretty_format(text, delimiters):\n",
-        "  return f'{delimiters[0]}{text}{delimiters[1]}'"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dSka7lTUEnbn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "s = pretty_format('Hello', '{}')\n",
-        "print(s)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BfnQjkuqEs5w",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def pretty_format(text, delimiters):\n",
-        "  s = f'{delimiters[0]}{text}{delimiters[1]}'\n",
-        "  return s, len(s)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HFvqGljxE8c6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "s, l = pretty_format('Hello World', delimiters=['<== ', ' ==>'])\n",
-        "print(s)\n",
-        "print(f'Length of s: {l}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Yg3V1zroFMf3",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Functions calling functions"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3voLD3ECHuHJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "Recall [converting hex to string](https://colab.research.google.com/drive/1uTgLbpEz1knWn8f6AbAKCFDtv56nH5sh?authuser=3#scrollTo=XvQXipSFVK0v).\n",
+        "Write a function `fib_range` that takes two arguments `start`, `stop` and generates the list of Fibonacci numbers from the `start`-th number to one before the `stop`-th.\n",
+        "\n",
+        "Example:\n",
         "\n",
         "```python\n",
-        "''.join([chr(int(hex_string[i:i+2], 16)) for i in range(0, len(hex_string), 2)])\n",
+        "fib_range(0, 10)\n",
+        "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+        "\n",
+        "fib_range(10, 20)\n",
+        "[55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n",
+        "\n",
+        "fib_range(0, 0)\n",
+        "[]\n",
         "```"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Flp_BeAGoy2",
+        "id": "hWoNAX2a9pXQ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def hex_to_chr(hx):\n",
-        "  return chr(int(hx, 16))\n",
+        "# Define your function in this block. Remember to run the block every time you\n",
+        "# change your code to re-define your function.\n",
         "\n",
-        "def hex_to_str(s):\n",
-        "  chars = [hex_to_chr(s[i:i+2]) for i in range(0, len(s), 2)]\n",
-        "  return ''.join(chars)\n",
-        "\n",
-        "hex_string = '49276d206c6f76696e672066756e6374696f6e7321'\n",
-        "print(hex_to_str(hex_string))"
+        "def fib_range(start, stop):\n",
+        "  # Your code starts here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jYm4idR59uO7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(fib_range(0, 10))\n",
+        "print(fib_range(10, 20))\n",
+        "print(fib_range(0, 0))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -406,29 +89,54 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QxFbfyZ3FWC-",
+        "id": "T2SvlOcM0gDa",
         "colab_type": "text"
       },
       "source": [
-        "## A glimpse into recursion (optional)"
+        "## 2.\n",
+        "\n",
+        "The `rot_encrypt` in the first block of this exercise is similar to the `rot` function we saw in the slides, except that it only handles plaintext-to-ciphertext encryption.\n",
+        "\n",
+        "Change the code so that, when encrypting, if `key` is `None`, the key is generated randomly inside the function and returned as a $(\\mbox{ciphertext}, \\mbox{key})$ `tuple`.\n",
+        "\n",
+        "This should be the default behavior when the `key` argument is not given to the function call.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```python\n",
+        "rot_encrypt('Hello', 13)\n",
+        "'uryyb'\n",
+        "\n",
+        "rot_encrypt('Hello', None)\n",
+        "('wtaad', 15)\n",
+        "\n",
+        "rot_encrypt('Hello')\n",
+        "('ebiil', 23)\n",
+        "```\n",
+        "\n",
+        "> **HINT:** Use the [`random.randrange`](https://docs.python.org/3/library/random.html#random.randrange) function from the standard library to generate random integers. Bring it into your code by running:\n",
+        "> ```python\n",
+        "from random import randrange\n",
+        "```"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ub4moNB-ScRL",
+        "id": "-ocY1zcG0iPg",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def flatten(nested):\n",
-        "  flat = []\n",
-        "  for item in nested:\n",
-        "    if type(item) == list:\n",
-        "      flat += flatten(item)\n",
-        "    else:\n",
-        "      flat.append(item)\n",
-        "  return flat"
+        "def rot_encrypt(input_text, key=13):\n",
+        "    output_text = ''\n",
+        "    input_text = input_text.lower()\n",
+        "    for c in input_text:\n",
+        "        if 'a' <= c <= 'z':\n",
+        "            output_text += chr(((ord(c) - ord('a') + key) % 26) + ord('a'))\n",
+        "        else:\n",
+        "            output_text += c\n",
+        "    return output_text"
       ],
       "execution_count": 0,
       "outputs": []
@@ -436,108 +144,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h64YWmG-Tzyx",
+        "id": "9qKZvL-T6afe",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "l = [[[5, 8], [[5, 3, 9, 8], 1, 3, [4]], 3], [[3, [6, 6, 9, 0]], 5], [6], [6, 3]]\n",
-        "flatten(l)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YHG4iFTtNSPu",
-        "colab_type": "text"
-      },
-      "source": [
-        "Reminder: definition of Fibonacci number $n$\n",
-        "\n",
-        "$F_n = F_{n-1} + F_{n-2} \\qquad F_0 = 0, F_1 = 1$"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "S96kiKGiFUH5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def fib(n):\n",
-        "  if n == 0:\n",
-        "    return 0\n",
-        "  elif n == 1:\n",
-        "    return 1\n",
-        "  else:\n",
-        "    return fib(n-1) + fib(n-2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "egWK8lV3GjfY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "[fib(i) for i in range(10)]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dLw6QR90O8EY",
-        "colab_type": "text"
-      },
-      "source": [
-        "Recursively listing directory contents is also a naturally recursive operation. As a general rule any hierarchical structure of unknown depth (e.g. directories, deeply nested JSON files, etc.)\n",
-        "\n",
-        "> **Note:** this example uses functions from the `os` module. Look at [the documentation](https://docs.python.org/3/library/os.html) to learn more."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XE5JUDwsKfMz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import os\n",
-        "import os.path\n",
-        "import stat\n",
-        "\n",
-        "def listdir_r(path):\n",
-        "  print(f'{path}:')\n",
-        "  paths = os.listdir(path)\n",
-        "  for p in paths:\n",
-        "    print(f'    {p}')\n",
-        "  print()\n",
-        "  for p in paths:\n",
-        "    fullpath = os.path.join(path, p)\n",
-        "    if stat.S_ISDIR(os.stat(fullpath).st_mode):\n",
-        "      listdir_r(fullpath)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "N5f9-lXNQ4P1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "listdir_r(os.getcwd())"
+        "print(rot_encrypt('Hello', 13))\n",
+        "print(rot_encrypt('Hello', None))\n",
+        "print(rot_encrypt('Hello'))"
       ],
       "execution_count": 0,
       "outputs": []
