--- a/004-Functions-And-More/Functions And More - Chap 01 - Exercises.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 01 - Exercises.ipynb
@@ -30,43 +30,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zDZdtpoR6-82",
+        "id": "m_ZlQlx8Dcmr",
         "colab_type": "text"
       },
       "source": [
         "## 1.\n",
         "\n",
-        "Recall the Fibonacci sequence from [this workshop](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/002-Control-Flow/Control%20Flow%20-%20Workshop.ipynb#scrollTo=gSLJQBHULPUj)\n",
+        "Write a function that greets–by saying `Hello!`—whatever we pass as argument.\n",
         "\n",
-        "Write a function `fib_range` that takes two arguments `start`, `stop` and generates the list of Fibonacci numbers from the `start`-th number to one before the `stop`-th.\n",
         "\n",
-        "Example:\n",
         "\n",
         "```python\n",
-        "fib_range(0, 10)\n",
-        "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+        "greet('World')\n",
+        "Hello World!\n",
         "\n",
-        "fib_range(10, 20)\n",
-        "[55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n",
+        "greet('Python')\n",
+        "Hello Python!\n",
         "\n",
-        "fib_range(0, 0)\n",
-        "[]\n",
+        "greet('')\n",
+        "Hello!\n",
         "```"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hWoNAX2a9pXQ",
+        "id": "DcrWFw21EJVq",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Define your function in this block. Remember to run the block every time you\n",
-        "# change your code to re-define your function.\n",
-        "\n",
-        "def fib_range(start, stop):\n",
-        "  # Your code starts here..."
+        "def greet(greetee):\n",
+        "  # Your code goes here"
       ],
       "execution_count": 0,
       "outputs": []
@@ -74,14 +69,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jYm4idR59uO7",
+        "id": "y9RRUG-oEQHv",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(fib_range(0, 10))\n",
-        "print(fib_range(10, 20))\n",
-        "print(fib_range(0, 0))"
+        "print(greet('World'))\n",
+        "print(greet('Python'))\n",
+        "print(greet(''))"
       ],
       "execution_count": 0,
       "outputs": []
