--- a/004-Functions-And-More/Functions And More - Chap 03 - Exercises.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 03 - Exercises.ipynb
@@ -30,87 +30,87 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VlIGRywl_1-W",
+        "id": "-84O4pgjH0v8",
         "colab_type": "text"
       },
       "source": [
         "## 1.\n",
         "\n",
-        "You've seen `sorted` and `reversed` which return a sorted or reversed list (or iterable) of an iterable sequence.\n",
+        "The code below is the one from [the demo](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/004-Functions-And-More/Functions%20And%20More%20-%20Chap%2003%20-%20Demo.ipynb#scrollTo=btJMxQ14brrP&line=6&uniqifier=1) to read the stock price CSV file.\n",
         "\n",
-        "Write a `shuffled` function, which takes an iterable and returns a shuffled list of the items of the iterable. **Important:** the original iterable item must not be modified.\n",
+        "Note that we never read actually read the file during the demo, because not all rows were in the expected format.\n",
         "\n",
-        "Example:\n",
-        "\n",
-        "```python\n",
-        "l = [*range(10)]\n",
-        "l\n",
-        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-        "\n",
-        "shuffled(l)\n",
-        "[7, 1, 5, 0, 8, 2, 4, 3, 6, 9]\n",
-        "\n",
-        "l\n",
-        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-        "\n",
-        "shuffled(range(10))\n",
-        "[2, 1, 9, 6, 5, 3, 7, 0, 8, 4]\n",
-        "```\n",
-        "\n",
-        "> **HINT:** remember the [`shuffle` function from the `random` module](https://docs.python.org/3/library/random.html#random.shuffle) which shuffles a list in place.\n",
-        "> Bring it into your code by running:\n",
-        "> ```python\n",
-        "from random import shuffle\n",
-        "```"
+        "Fix the `read_csv` function so that, if a row can't be read, it just skips over it and reads the next row"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5-JcAj4U_1Oc",
+        "id": "gBIniNXnH1OG",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# This code downloads a CSV file of stock prices from the web\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "res = requests.get('https://chrales.dev/python-3-beginner/tesla-stock-price.csv')\n",
+        "with open('tesla-stock-price.csv', mode='rb+') as f:\n",
+        "  f.write(res.content)\n",
+        "  # Display the 256 first bytes\n",
+        "  f.seek(0, 0)\n",
+        "  print(f'{f.read(256).decode()}...')"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XvZlD3geBrgp",
-        "colab_type": "text"
-      },
-      "source": [
-        "## 2.\n",
-        "\n",
-        "Write a function `greet_all` that greets all things passed as arguments.\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```\n",
-        "greet_all('World')\n",
-        "Hello World!\n",
-        "\n",
-        "greet_all('World', 'Python', 'Hedgehogs')\n",
-        "Hello World, Python and Hedgehogs!\n",
-        "\n",
-        "greet_all()\n",
-        "Hello!\n",
-        "```"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "jeOC2nf9BqxZ",
+        "id": "QJBXSMtud9t8",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "from datetime import datetime\n",
+        "\n",
+        "def read_csv(path):\n",
+        "    rows = []\n",
+        "    f = None\n",
+        "    try:\n",
+        "        f = open(path)\n",
+        "        s = f.read().splitlines()\n",
+        "        for row in s:\n",
+        "            row = row.split(',')\n",
+        "            date = datetime.strptime(row[0], '%Y/%m/%d')\n",
+        "            price = float(row[1])\n",
+        "            rows.append((date, price))\n",
+        "    except OSError as err:\n",
+        "        print(f'Failed to open file. {err}')\n",
+        "    except ValueError as err:\n",
+        "        print(f'Invalid data. {err}')\n",
+        "    except:\n",
+        "        raise\n",
+        "    else:\n",
+        "        return rows\n",
+        "    finally:\n",
+        "        if f is not None:\n",
+        "          f.close()\n",
+        "    return []"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LTYUmWoFIaZE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "read_csv('tesla-stock-price.csv')"
       ],
       "execution_count": 0,
       "outputs": []
