--- a/004-Functions-And-More/Functions And More - Workshop.ipynb
+++ b/004-Functions-And-More/Functions And More - Workshop.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Functions and more - Workshop",
+      "name": "Functions and more - Chap 01 - Exercises",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
@@ -30,90 +30,309 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-84O4pgjH0v8",
+        "id": "jPoCK1AfObtr",
         "colab_type": "text"
       },
       "source": [
-        "## 1.\n",
+        "## 1. Variable scope\n",
         "\n",
-        "The code below is the one from [the demo](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/004-Functions-And-More/Functions%20And%20More%20-%20Chap%2003%20-%20Demo.ipynb#scrollTo=btJMxQ14brrP&line=6&uniqifier=1) to read the stock price CSV file.\n",
+        "For each question, read the block of code and check the correct answer.\n",
         "\n",
-        "Note that we never read actually read the file during the demo, because not all rows were in the expected format.\n",
+        "> To check a checkbox, double-click on the text cell to edit it, and add an `x` inside the brackets, like `[x]`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aKLlJGYIbk8V",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 1. What would be the output of this program?\n",
         "\n",
-        "Fix the `read_csv` function so that, if a row can't be read, it just skips over it and reads the next row"
+        "```python\n",
+        "def buy_eggs(num_eggs)\n",
+        "    egg_count = 0\n",
+        "    egg_count += num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m1sILQDwclVJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 2. What would be the output of this program?\n",
+        "\n",
+        "```python\n",
+        "egg_count = 0\n",
+        "\n",
+        "def buy_eggs(num_eggs)\n",
+        "    egg_count += num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CzASqA5_cxOZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 3. What would be the output of this program?\n",
+        "\n",
+        "```python\n",
+        "egg_count = 0\n",
+        "\n",
+        "def buy_eggs(num_eggs)\n",
+        "    egg_count = num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ddeDKQWgc3DL",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 4. What would be the output of this program?\n",
+        "\n",
+        "```python\n",
+        "def buy_eggs(num_eggs)\n",
+        "    egg_count = 0\n",
+        "    egg_count += num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "egg_count = buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bTb_nizOc9CY",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### 5. What would be the output of this program?\n",
+        "\n",
+        "```python\n",
+        "egg_count = 0\n",
+        "\n",
+        "def buy_eggs(num_eggs)\n",
+        "    global egg_count\n",
+        "    egg_count += num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-7nkrPc3dXYy",
+        "colab_type": "text"
+      },
+      "source": [
+        "####6. What would be the output of this program?\n",
+        "\n",
+        "```python\n",
+        "def buy_eggs(num_eggs)\n",
+        "    egg_count = 0\n",
+        "    egg_count += num_eggs\n",
+        "    return egg_count\n",
+        "\n",
+        "egg_count = buy_eggs(12)\n",
+        "buy_eggs(12)\n",
+        "buy_eggs(12)\n",
+        "buy_eggs(12)\n",
+        "print(egg_count)\n",
+        "```\n",
+        "\n",
+        " * [ ] `0`\n",
+        " * [ ] `12`\n",
+        " * [ ] something else\n",
+        " * [ ] an error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_K8vk1pKMEft",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2. Functional Programming - Reduce\n",
+        "\n",
+        "Write a function `reduce` that takes:\n",
+        "\n",
+        "* a function that takes 2 arguments\n",
+        "* an iterable\n",
+        "* an initial value\n",
+        "\n",
+        "and returns a single value, obtained by applying the function cumulatively to the items of the iterable, from left to right.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```python\n",
+        "reduce(lambda x, y: x+y, [1, 2, 3, 4], 0)\n",
+        "10\n",
+        "```\n",
+        "\n",
+        "because $((((0+1)+2)+3)+4) = 10$\n",
+        "\n",
+        "> **Note:** `reduce`-ing is a very common problem in data science. For lists of data, we want to extract a single value (average, standard deviation, mean-squared error, etc.). Functional programming helps to give a simple way to express this calculation. As seen above, `sum` is actually a special case of reducing, using addition as the cumulative function."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gBIniNXnH1OG",
+        "id": "jfaeZOazO-k4",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# This code downloads a CSV file of stock prices from the web\n",
-        "\n",
-        "import requests\n",
-        "\n",
-        "res = requests.get('https://chrales.dev/python-3-beginner/tesla-stock-price.csv')\n",
-        "with open('tesla-stock-price.csv', mode='rb+') as f:\n",
-        "  f.write(res.content)\n",
-        "  # Display the 256 first bytes\n",
-        "  f.seek(0, 0)\n",
-        "  print(f'{f.read(256).decode()}...')"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LF09v1SwRc_k",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3. Functional Programming - Group by\n",
+        "\n",
+        "Write a function `group_by` that takes:\n",
+        "\n",
+        "* a function that takes a single argument\n",
+        "* an iterable\n",
+        "\n",
+        "and returns a dictionary that maps lists of items of the iterable to the value they return through the function. I.e. all values that return `True` when passed to the function would appear in a `list` mapped to the key `True` in the `dict`.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```python\n",
+        "group_by(lambda x: 'even' if (x % 2) == 0 else 'odd', range(10))\n",
+        "{'even': [0, 2, 4, 6, 8], 'odd': [1, 3, 5, 7, 9]}\n",
+        "\n",
+        "group_by(lambda x: x['winner'], world_cup)\n",
+        "{'Italy': [{'year': 1934, 'country': 'Italy', 'winner': 'Italy'},\n",
+        "           {'year': 1938, 'country': 'France', 'winner': 'Italy'},\n",
+        "           {'year': 1982, 'country': 'Spain', 'winner': 'Italy'},\n",
+        "           {'year': 2006, 'country': 'Germany', 'winner': 'Italy'}],\n",
+        " 'Brazil': [{'year': 1958, 'country': 'Sweden', 'winner': 'Brazil'},\n",
+        "            {'year': 1962, 'country': 'Chile', 'winner': 'Brazil'},\n",
+        "            {'year': 1970, 'country': 'Mexico', 'winner': 'Brazil'},\n",
+        "            {'year': 1994, 'country': 'USA', 'winner': 'Brazil'},\n",
+        "            {'year': 2002, 'country': 'Korea/Japan', 'winner': 'Brazil'}],\n",
+        " 'England': [{'year': 1966, 'country': 'England', 'winner': 'England'}],\n",
+        " ...\n",
+        "```"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "QJBXSMtud9t8",
+        "id": "LjJHCq3FYlV3",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from datetime import datetime\n",
-        "\n",
-        "def read_csv(path):\n",
-        "    rows = []\n",
-        "    f = None\n",
-        "    try:\n",
-        "        f = open(path)\n",
-        "        s = f.read().splitlines()\n",
-        "        for row in s:\n",
-        "            row = row.split(',')\n",
-        "            date = datetime.strptime(row[0], '%Y/%m/%d')\n",
-        "            price = float(row[1])\n",
-        "            rows.append((date, price))\n",
-        "    except OSError as err:\n",
-        "        print(f'Failed to open file. {err}')\n",
-        "    except ValueError as err:\n",
-        "        print(f'Invalid data. {err}')\n",
-        "    except:\n",
-        "        raise\n",
-        "    else:\n",
-        "        return rows\n",
-        "    finally:\n",
-        "        if f is not None:\n",
-        "          f.close()\n",
-        "    return []"
+        "world_cup = [{'year': 1930, 'country': 'Uruguay', 'winner': 'Uruguay'},\n",
+        " {'year': 1934, 'country': 'Italy', 'winner': 'Italy'},\n",
+        " {'year': 1938, 'country': 'France', 'winner': 'Italy'},\n",
+        " {'year': 1950, 'country': 'Brazil', 'winner': 'Uruguay'},\n",
+        " {'year': 1954, 'country': 'Switzerland', 'winner': 'Germany'},\n",
+        " {'year': 1958, 'country': 'Sweden', 'winner': 'Brazil'},\n",
+        " {'year': 1962, 'country': 'Chile', 'winner': 'Brazil'},\n",
+        " {'year': 1966, 'country': 'England', 'winner': 'England'},\n",
+        " {'year': 1970, 'country': 'Mexico', 'winner': 'Brazil'},\n",
+        " {'year': 1974, 'country': 'Germany', 'winner': 'Germany'},\n",
+        " {'year': 1978, 'country': 'Argentina', 'winner': 'Argentina'},\n",
+        " {'year': 1982, 'country': 'Spain', 'winner': 'Italy'},\n",
+        " {'year': 1986, 'country': 'Mexico', 'winner': 'Argentina'},\n",
+        " {'year': 1990, 'country': 'Italy', 'winner': 'Germany'},\n",
+        " {'year': 1994, 'country': 'USA', 'winner': 'Brazil'},\n",
+        " {'year': 1998, 'country': 'France', 'winner': 'France'},\n",
+        " {'year': 2002, 'country': 'Korea/Japan', 'winner': 'Brazil'},\n",
+        " {'year': 2006, 'country': 'Germany', 'winner': 'Italy'},\n",
+        " {'year': 2010, 'country': 'South Africa', 'winner': 'Spain'},\n",
+        " {'year': 2014, 'country': 'Brazil', 'winner': 'Germany'}]"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "LTYUmWoFIaZE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FR49GFMAZovz",
+        "colab_type": "text"
       },
       "source": [
-        "read_csv('tesla-stock-price.csv')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "> **HINT:** If this one seems too hard at first, start by solving the problem with the name of the key for `world_cup_winners` and work your way from there.\n",
+        ">\n",
+        "> ```python\n",
+        "group_by_key('winner', world_cup)\n",
+        "{'Italy': [{'year': 1934, 'country': 'Italy', 'winner': 'Italy'},\n",
+        "           {'year': 1938, 'country': 'France', 'winner': 'Italy'},\n",
+        "           {'year': 1982, 'country': 'Spain', 'winner': 'Italy'},\n",
+        "           {'year': 2006, 'country': 'Germany', 'winner': 'Italy'}],\n",
+        " 'Brazil': [{'year': 1958, 'country': 'Sweden', 'winner': 'Brazil'},\n",
+        "            {'year': 1962, 'country': 'Chile', 'winner': 'Brazil'},\n",
+        "            {'year': 1970, 'country': 'Mexico', 'winner': 'Brazil'},\n",
+        "            {'year': 1994, 'country': 'USA', 'winner': 'Brazil'},\n",
+        "            {'year': 2002, 'country': 'Korea/Japan', 'winner': 'Brazil'}],\n",
+        " 'England': [{'year': 1966, 'country': 'England', 'winner': 'England'}],\n",
+        " ...\n",
+        " ```"
+      ]
     }
   ]
 }
