--- a/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 03 - Demo.ipynb
@@ -6,7 +6,6 @@
       "name": "Functions and more - Chap 03 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNP3mIaQznKVLxWHQBwrzD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -411,7 +410,7 @@
         "import requests\n",
         "\n",
         "res = requests.get('https://chrales.dev/python-3-beginner/tesla-stock-price.csv')\n",
-        "with open('tesla-stock-prices.csv', mode='rb+') as f:\n",
+        "with open('tesla-stock-price.csv', mode='rb+') as f:\n",
         "  f.write(res.content)\n",
         "  # Display the 256 first bytes\n",
         "  f.seek(0, 0)\n",
@@ -466,7 +465,7 @@
         "colab": {}
       },
       "source": [
-        "read_csv('tesla-stock-price.csv')"
+        "read_csv('tesla-stock-prices.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -479,7 +478,7 @@
         "colab": {}
       },
       "source": [
-        "read_csv('tesla-stock-prices.csv')"
+        "read_csv('tesla-stock-price.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -527,7 +526,7 @@
         "colab": {}
       },
       "source": [
-        "read_csv('tesla-stock-price.csv')"
+        "read_csv('tesla-stock-prices.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -540,7 +539,7 @@
         "colab": {}
       },
       "source": [
-        "read_csv('tesla-stock-prices.csv')"
+        "read_csv('tesla-stock-price.csv')"
       ],
       "execution_count": 0,
       "outputs": []
